--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,6 +2,9 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.example.user.hradvacation">
 
+    <uses-permission android:name="android.permission.INTERNET" />
+    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE"/>
+
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
@@ -18,6 +21,9 @@
         </activity>
         <activity android:name=".Register" />
         <activity android:name=".manager_view"></activity>
+        <activity android:name=".user_view"></activity>
+        <activity android:name=".PopupActivity" android:theme="@android:style/Theme.Dialog" />
+
     </application>
 
 </manifest>
